Add item name partial search
